# atlasfx-mvp

./: .coverage  .coverage.Praveens-MBP.39705.XxRNVvsx  .editorconfig  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CODE_QUALITY.md  CONTRIBUTING.md  DECISIONS.md  FEATURES.md  MIGRATION_NOTES.md  MVP_ACTION_PLAN.md  PR_SUMMARY.md  QUICKSTART.md  README.md  README_visualization.md  REFACTORING_SUMMARY.md  RESTRUCTURE_SUMMARY.md  aggregate.py  aggregators.py  augment.py  augmentations.py  clean.py  coverage.xml  featurize.py  featurizers.py  merge.py  normalize.py  pipeline.py  pipeline.yaml  pyproject.toml  requirements.txt  setup_dev.sh  summary  test.ipynb  visualize.py  winsorize.py
.github/workflows/: ci.yml
agent/TD3/: DDPG.py  OurDDPG.py  TD3.py  env.py  main.py  requirements.txt
atlasfx_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: data_pipeline.yaml  schema.yaml
data-pipeline/: FEATURE_AUDIT_CHECKLIST.md  IMPROVEMENTS.md  README.md  aggregate.py  aggregators.py  clean.py  featurize.py  featurizers.py  logger.py  merge.py  normalize.py  pipeline.py  pipeline.yaml  requirements.txt  split.py  visualize.py  winsorize.py
docs/: ARCHITECTURE.md  BACKLOG.md  CLEANUP_SUMMARY.md  DONDE_ALMACENAR_DATOS.md  MULTI_AGENT_BENCHMARKING.md  NEXT_STEPS.md  REPOSITORY_STRUCTURE.md
notebooks/: README.md
scripts/: README.md  run_data_pipeline.py  setup_env.sh
src/atlasfx/: __init__.py
src/atlasfx/agents/: __init__.py
src/atlasfx/config/: __init__.py
src/atlasfx/data/: __init__.py  aggregation.py  aggregators.py  cleaning.py  featurization.py  featurizers.py  loaders.py  normalization.py  processors.py  splitters.py  validators.py  winsorization.py
src/atlasfx/environments/: __init__.py  trading_env.py
src/atlasfx/evaluation/: __init__.py  visualizers.py
src/atlasfx/models/: __init__.py  sac.py  tft.py  vae.py
src/atlasfx/training/: __init__.py  trainer.py
src/atlasfx/utils/: logging.py  pathing.py
tests/: conftest.py
tests/fixtures/: e2e_pipeline_config.yaml  sample_ticks.csv
tests/fixtures/e2e_test_data/: testusd_tick_data.csv
tests/fixtures/e2e_test_data/eurusd/: eurusd_tick_data.csv
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_aggregators.py
tests/unit/data/: test_aggregators.py  test_schema_validation.py  test_validators.py
(+1 files in other folders)
